@@ -119,6 +119,7 @@ bool CGUIWindowVisualisation::OnMessage(CGUIMessage& message)
       if (pOSD && pOSD->IsRunning()) pOSD->Close(true);
       CGUIDialogVisualisationPresetList *pList = (CGUIDialogVisualisationPresetList *)m_gWindowManager.GetWindow(WINDOW_DIALOG_VIS_PRESET_LIST);
       if (pList && pList->IsRunning()) pList->Close(true);
+      g_application.m_CdgParser.FreeGraphics();
     }
     break;
   case GUI_MSG_WINDOW_INIT:
@@ -136,6 +137,8 @@ bool CGUIWindowVisualisation::OnMessage(CGUIMessage& message)
       g_infoManager.SetShowInfo(true);  // always show the info initially.
       CGUIWindow::OnMessage(message);
       m_tag = g_infoManager.GetCurrentSongTag();
+      if (g_guiSettings.GetBool("Karaoke.Enabled"))
+        g_application.m_CdgParser.AllocGraphics();
       if (g_stSettings.m_bMyMusicSongThumbInVis)
       { // always on
         m_dwInitTimer = 0;
